--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "volumio",
     "hifi",
     "smart home",
-    "home automation"
+    "home automation",
+    "ioBroker"
   ],
   "repository": {
     "type": "git",
@@ -24,7 +25,7 @@
   "dependencies": {
     "@iobroker/adapter-core": "^3.1.4",
     "axios": "^1.6.8",
-    "body-parser": "1.20.2",
+    "body-parser": "^1.20.4",
     "express": "^4.19.2",
     "ip": "^2.0.1"
   },
@@ -38,7 +39,7 @@
     "@tsconfig/node18": "^18.2.4",
     "@types/chai": "^4.3.16",
     "@types/chai-as-promised": "^7.1.8",
-    "@types/express": "4.17.21",
+    "@types/express": "^4.17.21",
     "@types/ip": "1.1.3",
     "@types/mocha": "^10.0.6",
     "@types/node": "^18.19.33",
