fix(deps): override esbuild to >=0.25.0 to resolve security vulnerability
Adds npm overrides to force esbuild to version ^0.25.0 or higher for all
transitive dependencies. This resolves Dependabot alert #46 (GHSA-67mh-4wv8-2f99)
regarding CORS misconfiguration in esbuild development server.

--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
+  "overrides": {
+    "esbuild": "^0.25.0"
+  },
   "main": "build/main.js",
   "files": [
     "admin{,/!(src)/**}/!(tsconfig|tsconfig.*|.eslintrc).{json,json5}",
